index, subpage 수정

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="header_bottom">
-                <h1 class="logo"><a href="/index.html"><img src="images/logo.png" alt="매일유업"></a></h1>
+                <h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="매일유업"></a></h1>
                 <nav class="gnb">
                     <h2 class="hide">주요메뉴</h2>
                     <ul>
@@ -452,9 +452,9 @@
                             <li><a href="#none">매일헬스뉴트리션</a></li>
                             <li><a href="#none">제로투세븐</a></li>
                             <li><a href="#none">상하농원</a></li>
-                            <li><a href="#none">엠즈씨드(폴바셋)</a></li>
+                            <li><a href="#none">엠즈씨드&#40;폴바셋&#41;</a></li>
                             <li><a href="#none">크리스탈제이드</a></li>
-                            <li><a href="#none">엠즈씨드(더 키친 일뽀르노)</a></li>
+                            <li><a href="#none">엠즈씨드&#40;더 키친 일뽀르노&#41;</a></li>
                             <li><a href="#none">엠즈베버리지</a></li>
                             <li><a href="#none">엠즈푸드시스템</a></li>
                             <li><a href="#none">엠즈파트너스</a></li>
@@ -469,10 +469,10 @@
                             <div class="agreement">
                             <a href="#none">개인정보 처리방침 <img src="images/line.png" alt=""></a>
                             <a href="#none">이용약관 <img src="images/line.png" alt=""></a>
-                            <a href="#none">전자입찰(협력사용)</a>
+                            <a href="#none">전자입찰&#40;협력사용&#41;</a>
                             <a href="#none">인재채용</a>
                             </div>
-                            <address>서울시 종로구 종로 1길 50 더 케이 트윈타워 A동 대표전화 : 1588-1539</address>
+                            <address>서울시 종로구 종로 1길 50 더 케이 트윈타워 A동 대표전화 &#58; 1588&#45;1539</address>
                             </div>
                         </div>
                     </div>
