--- a/sub_page/introduce/maeil_introduce.html
+++ b/sub_page/introduce/maeil_introduce.html
@@ -229,7 +229,7 @@
               <a href="pdf/maeil.pdf" class="maeilpdf_page" target="_blank">기업브로셔 다운로드</a>
               <a href="pdf/maeilIntro.pdf" class="maeilpdf_page" target="_blank">기업소개자료 다운로드</a>
               </div>
-              <p><span class="maeil_introduce_text">유제품을 통해 국민의 건강한 삶을 만든다는 신념을 담아 1969년&#44; 한국낙농가공주식회사로 출범한 매일유업&#46;</span><br>이러한 창업정신은 오늘까지 이어져 매일 묻고 매일 답하는 성실한 자세로 건강한 사회를 만들기 위해 노력하고 있습니다&#46;<br>매일유업은 더 많은 연구와 끊임없는 노력으로 새로운 식문화를 창조하며&#44; 대한민국을 넘어<br>글로벌 종합식품기업으로 도약하는 더 큰 역사를 개척해 나가고자 합니다&#46;<br><span class="maeil_introduce_text">남들이 가지 않은 길을 언제나 제일 먼저 앞장서는 매일유업의 이야기&#44; 지금 시작합니다&#46;</span><br><span class="maeil_introduce_text">&#34; 남들이 가지 않은 길을 언제나 제일 먼저 갔습니다&#46; 그것이 우리의 사명이고, 우리의 몫입니다&#46;  &#34;</span><br><span class="maeil_introduce_text">매일유업 창업주 故 김복용 회장</span></p>
+              <p><span class="maeil_introduce_text">유제품을 통해 국민의 건강한 삶을 만든다는 신념을 담아 1969년&#44; 한국낙농가공주식회사로 출범한 매일유업&#46;</span><br>이러한 창업정신은 오늘까지 이어져 매일 묻고 매일 답하는 성실한 자세로 건강한 사회를 만들기 위해 노력하고 있습니다&#46;<br>매일유업은 더 많은 연구와 끊임없는 노력으로 새로운 식문화를 창조하며&#44; 대한민국을 넘어<br>글로벌 종합식품기업으로 도약하는 더 큰 역사를 개척해 나가고자 합니다&#46;<br><span class="maeil_introduce_text">남들이 가지 않은 길을 언제나 제일 먼저 앞장서는 매일유업의 이야기&#44; 지금 시작합니다&#46;</span><br><span class="maeil_introduce_text">&#34; 남들이 가지 않은 길을 언제나 제일 먼저 갔습니다&#46; 그것이 우리의 사명이고&#44; 우리의 몫입니다&#46;  &#34;</span><br><span class="maeil_introduce_text">매일유업 창업주 故 김복용 회장</span></p>
               <img class="side_bar" src="images/side_bar.png" alt="" height="10">
               <h2 class="maeil_mean">Maeil이 담은 의미</h2>
               <p><span class="more_develop">매일 묻고 매일 답하며 매일은 끊임없이 진전합니다&#46;</span></p>
@@ -314,5 +314,15 @@
             </div>
         </div>
         </footer>
+        <div class="subtitle_modal">
+          <div class="subtitle_modal_wrap">
+            <h4>기업홍보영상</h4>
+            <img src="/images/side_bar.png" alt="" height="10px">
+            <div class="subtitle_modal_colorbox">
+            <p>여기&#44; 대한민국의 낙농업을 선도하며<br>당당히 글로벌 기업으로 성장한 종합식품회사가 있습니다&#46;<br>남들이 가지 않은 길을 걸으며 매일 매일 최초에 도전해 온 그 이야기에<br>귀 기울여 보십시오.<br>1969년 유제품 전문회사로 출발하여<br>한국 최초&#44; 최초&#44; 최초&#8230;<br>매일유업이 써 내려간 최초의 이야기들은<br>대한민국 유제품의 역사가 되었습니다&#46;<br>우리는 소비자에게 사랑 받기 위해 늘 신선하고 믿을 수 있는 우유를 만듭니다&#46;<br>한국 최초 HACCP인증을 획득한 유아식&#46;<br>전통적 기술로 만든 발효유<br>프리미엄 우유시장의 새 지평을 연 상하목장&#44;<br>카페라떼&#44; 썬업을 비롯하여<br>단 한 명의 아이도 건강한 삶에서 소외되지 않도록 한국 최초<br>15종의 특수분유 개발에 이르기까지<br>매일 매일 새로운 이야기를 건네고 있습니다&#46;<br>우리가 매일 추구하는 목표는<br>세계수준의 기술과 첨단 시스템으로 만든<br>최고품질의 제품을 생산지에서 소비자의 손까지<br>안전하고 신속하게 전해드리는 것입니다&#46;</p>
+            </div>
+            <img class="subtitle_modal_close" src="images/popup_close.png" alt="닫기" width="40" height="40">
+          </div>
+        </div>
   </body>
 </html>
