--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="header_bottom">
-                <h1 class="logo"><a href="index.html"><img src="images/logo.png" alt="매일유업"></a></h1>
+                <h1 class="logo"><a href="./index.html"><img src="images/logo.png" alt="매일유업"></a></h1>
                 <nav class="gnb">
                     <h2 class="hide">주요메뉴</h2>
                     <ul>
