IR 경로수정, not_ready 추가 및 고객문의 수정

--- a/sub_page/customer_center/customer_contact.html
+++ b/sub_page/customer_center/customer_contact.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    
+    <script src="js/customer_contact.js"></script>
   </head>
   <body>
     <header id="header">
@@ -70,7 +70,7 @@
                       <li>회사소개</li>
                       <li><a href="../introduce/maeil_introduce.html">기업소개</a></li>
                       <li><a href="../introduce/maeil_introduce_hello.html">인사말</a></li>
-                      <li><a href="#none">히스토리</a></li>
+                      <li class="not_ready"><a href="#none">히스토리</a></li>
                       <li><a href="../introduce/maeil_introduce_map_location_1.html">오시는 길</a></li>
                     </ul>
                   </div>
@@ -103,7 +103,7 @@
                           <li>사회공헌</li>
                           <li><a href="../social_contribution/social_intro.html">사회공헌 소개</a></li>
                           <li><a href="../social_contribution/give_birth_rate.html">나눔 활동</a></li>
-                          <li><a href="#none">사회공헌 연혁</a></li>
+                          <li class="not_ready"><a href="#none">사회공헌 연혁</a></li>
                           <li><a href="../social_contribution/social_news.html">나눔소식</a></li>
                       </ul>
                   </div>
@@ -114,8 +114,8 @@
                           <li>상생 &centerdot; 윤리경영</li>
                           <li><a href="../management/win_win.html">상생경영</a></li>
                           <li><a href="../management/ethical.html">윤리경영</a></li>
-                          <li><a href="#none">가족친화 경영</a></li>
-                          <li><a href="#none">매일유업 동반성장</a></li>
+                          <li class="not_ready"><a href="#none">가족친화 경영</a></li>
+                          <li class="not_ready"><a href="#none">매일유업 동반성장</a></li>
                       </ul>
                   </div>
               </li>
@@ -144,7 +144,7 @@
                   <div>
                       <ul>
                           <li>ESG 정보 공개</li>
-                          <li><a href="#none">ESG 정보 공개</a></li>
+                          <li class="not_ready"><a href="#none">ESG 정보 공개</a></li>
                       </ul>
                   </div>
               </li>
@@ -161,11 +161,11 @@
           <h3>고객센터</h3>
           <ul>
             <li class="indv checked"><a href="customer_contact.html">고객문의</a></li>
-            <li class="indv"><a href="#none">자주묻는질문</a></li>
-            <li class="indv"><a href="#none">문의내역확인</a></li>
-            <li class="indv"><a href="#none">제품개선사례</a></li>
-            <li class="indv"><a href="#none">고객불만 처리절차</a></li>
-            <li class="indv"><a href="#none">소비자중심경영&#40;CCM&#41;</a></li>
+            <li class="indv not_ready"><a href="#none">자주묻는질문</a></li>
+            <li class="indv not_ready"><a href="#none">문의내역확인</a></li>
+            <li class="indv not_ready"><a href="#none">제품개선사례</a></li>
+            <li class="indv not_ready"><a href="#none">고객불만 처리절차</a></li>
+            <li class="indv not_ready"><a href="#none">소비자중심경영&#40;CCM&#41;</a></li>
           </ul>
         </div>
 
