--- a/sub_page/IR/공고.html
+++ b/sub_page/IR/공고.html
@@ -50,7 +50,7 @@
               >
             </li>
             <li class="util_menu03">
-              <a href="../log_in/log_in.html"><img src="images/login.png" alt="" />로그인</a>
+              <a href="../log_in/log_in/log_in.html"><img src="images/login.png" alt="" />로그인</a>
             </li>
             <li id="search_icon" class="util_menu04">
               <a href="#none"><img src="images/search.png" alt="" />검색</a>
@@ -76,7 +76,7 @@
                   <li>회사소개</li>
                   <li><a href="../introduce/maeil_introduce.html">기업소개</a></li>
                   <li><a href="../introduce/maeil_introduce_hello.html">인사말</a></li>
-                  <li><a href="#none">히스토리</a></li>
+                  <li class="not_ready"><a href="#none">히스토리</a></li>
                   <li><a href="../introduce/maeil_introduce_map_location_1.html">오시는 길</a></li>
                 </ul>
               </div>
@@ -109,7 +109,7 @@
                   <li>사회공헌</li>
                   <li><a href="../social_contribution/social_intro.html">사회공헌 소개</a></li>
                   <li><a href="../social_contribution/give_birth_rate.html">나눔 활동</a></li>
-                  <li><a href="#none">사회공헌 연혁</a></li>
+                  <li class="not_ready"><a href="#none">사회공헌 연혁</a></li>
                   <li><a href="../social_contribution/social_news.html">나눔소식</a></li>
                 </ul>
               </div>
@@ -120,8 +120,8 @@
                   <li>상생 &centerdot; 윤리경영</li>
                   <li><a href="../management/win_win.html">상생경영</a></li>
                 <li><a href="../management/ethical.html">윤리경영</a></li>
-                <li><a href="#none">가족친화 경영</a></li>
-                <li><a href="#none">매일유업 동반성장</a></li>
+                <li class="not_ready"><a href="#none">가족친화 경영</a></li>
+                <li class="not_ready"> <a href="#none">매일유업 동반성장</a></li>
                 </ul>
               </div>
             </li>
@@ -150,7 +150,7 @@
               <div>
                 <ul>
                   <li>ESG 정보 공개</li>
-                  <li><a href="#none">ESG 정보 공개</a></li>
+                  <li class="not_ready"><a href="#none">ESG 정보 공개</a></li>
                 </ul>
               </div>
             </li>
@@ -179,8 +179,8 @@
               <ul class="side_menu01_open">
                 <li class="indv"><a href="요약재무정보.html">&#45; 요약재무정보</a></li>
                 <li class="indv"><a href="재무상태표.html">&#45; 재무상태표</a></li>
-                <li class="indv"><a href="#">&#45; 손익계산서</a></li>
-                <li class="indv"><a href="#">&#45; 현금흐름표</a></li>
+                <li class="indv not_ready"><a href="#none">&#45; 손익계산서</a></li>
+                <li class="indv not_ready"><a href="#none">&#45; 현금흐름표</a></li>
               </ul>
             </li>
 
