--- a/sub_page/PR/공지사항.html
+++ b/sub_page/PR/공지사항.html
@@ -76,7 +76,7 @@
                   <li>회사소개</li>
                   <li><a href="../introduce/maeil_introduce.html">기업소개</a></li>
                   <li><a href="../introduce/maeil_introduce_hello.html">인사말</a></li>
-                  <li><a href="#none">히스토리</a></li>
+                  <li class="not_ready"><a href="#none">히스토리</a></li>
                   <li><a href="../introduce/maeil_introduce_map_location_1.html">오시는 길</a></li>
                 </ul>
               </div>
@@ -109,8 +109,8 @@
                   <li>사회공헌</li>
                   <li><a href="#none">사회공헌 소개</a></li>
                   <li><a href="#none">나눔 활동</a></li>
-                  <li><a href="#none">사회공헌 연혁</a></li>
-                  <li><a href="#none">나눔소식</a></li>
+                  <li class="not_ready"><a href="#none">사회공헌 연혁</a></li>
+                  <li class="not_ready"><a href="#none">나눔소식</a></li>
                 </ul>
               </div>
             </li>
@@ -118,10 +118,10 @@
               <div>
                 <ul>
                   <li>상생 &centerdot; 윤리경영</li>
-                  <li><a href="#none">상생경영</a></li>
-                  <li><a href="#none">윤리경영</a></li>
-                  <li><a href="#none">가족친화 경영</a></li>
-                  <li><a href="#none">매일유업 동반성장</a></li>
+                  <li><a href="../management/win_win.html">상생경영</a></li>
+                  <li><a href="../management/ethical.html">윤리경영</a></li>
+                  <li class="not_ready"><a href="#none">가족친화 경영</a></li>
+                  <li class="not_ready"><a href="#none">매일유업 동반성장</a></li>
                 </ul>
               </div>
             </li>
@@ -150,7 +150,7 @@
               <div>
                 <ul>
                   <li>ESG 정보 공개</li>
-                  <li><a href="#none">ESG 정보 공개</a></li>
+                  <li class="not_ready"><a href="#none">ESG 정보 공개</a></li>
                 </ul>
               </div>
             </li>
@@ -178,7 +178,7 @@
                 />
               </a>
               <ul class="side_menu01_open">
-                <li class="indv"><a href="#">- 영상광고</a></li>
+                <li class="indv not_ready"><a href="#none">- 영상광고</a></li>
                 <li class="indv"><a href="인쇄광고.html">&#45; 인쇄광고</a></li>
               </ul>
             </li>
