--- a/sub_page/introduce/maeil_introduce.html
+++ b/sub_page/introduce/maeil_introduce.html
@@ -78,7 +78,7 @@
                   <li>회사소개</li>
                   <li><a href="maeil_introduce.html">기업소개</a></li>
                   <li><a href="maeil_introduce_hello.html">인사말</a></li>
-                  <li><a href="#none">히스토리</a></li>
+                  <li class="not_ready"><a href="#none">히스토리</a></li>
                   <li><a href="maeil_introduce_map_location_1.html">오시는 길</a></li>
                 </ul>
               </div>
@@ -113,7 +113,7 @@
                   <li>사회공헌</li>
                   <li><a href="../social_contribution/social_intro.html">사회공헌 소개</a></li>
                   <li><a href="../social_contribution/give_birth_rate.html">나눔 활동</a></li>
-                  <li><a href="#none">사회공헌 연혁</a></li>
+                  <li class="not_ready"><a href="#none">사회공헌 연혁</a></li>
                   <li><a href="../social_contribution/social_news.html">나눔소식</a></li>
                 </ul>
               </div>
@@ -125,8 +125,8 @@
                   <li>상생 &centerdot; 윤리경영</li>
                   <li><a href="../management/win_win.html">상생경영</a></li>
                   <li><a href="../management/ethical.html">윤리경영</a></li>
-                  <li><a href="#none">가족친화 경영</a></li>
-                  <li><a href="#none">매일유업 동반성장</a></li>
+                  <li class="not_ready"><a href="#none">가족친화 경영</a></li>
+                  <li class="not_ready"><a href="#none">매일유업 동반성장</a></li>
                 </ul>
               </div>
             </li>
@@ -158,7 +158,7 @@
               <div>
                 <ul>
                   <li>ESG 정보 공개</li>
-                  <li><a href="#none">ESG 정보 공개</a></li>
+                  <li class="not_ready"><a href="#none">ESG 정보 공개</a></li>
                 </ul>
               </div>
             </li>
@@ -184,15 +184,15 @@
               </ul>
             </li>
             <li class="indv"><a href="maeil_introduce_hello.html">인사말</a></li>
-            <li class="indv"><a href="#none">히스토리</a></li>
+            <li class="indv not_ready"><a href="#none">히스토리</a></li>
             <li class="li_wrap2 arrow_button">
               <a href="#none">오시는 길<img class="active selected" src="images/down_arrow.png" alt="오시는 길 펼치기" /></a>
               <ul class="side_menu02_open">
                 <li class="indv"><a href="maeil_introduce_map_location_1.html">&#45; 본사</a></li>
                 <li class="indv"><a href="maeil_introduce_map_location_2.html">&#45; 연구소</a></li>
-                <li class="indv"><a href="#none">&#45; 공장</a></li>
-                <li class="indv"><a href="#none">&#45; 지점</a></li>
-                <li class="indv"><a href="#none">&#45; 대리점</a></li>
+                <li class="indv not_ready"><a href="#none">&#45; 공장</a></li>
+                <li class="indv not_ready"><a href="#none">&#45; 지점</a></li>
+                <li class="indv not_ready"><a href="#none">&#45; 대리점</a></li>
               </ul>
           </ul>
         </div>
@@ -289,9 +289,9 @@
                 <li><a href="#none">매일헬스뉴트리션</a></li>
                 <li><a href="#none">제로투세븐</a></li>
                 <li><a href="#none">상하농원</a></li>
-                <li><a href="#none">엠즈씨드(폴바셋)</a></li>
+                <li><a href="#none">엠즈씨드&#40;폴바셋&#41;</a></li>
                 <li><a href="#none">크리스탈제이드</a></li>
-                <li><a href="#none">엠즈씨드(더 키친 일뽀르노)</a></li>
+                <li><a href="#none">엠즈씨드&#40;더 키친 일뽀르노&#41;</a></li>
                 <li><a href="#none">엠즈베버리지</a></li>
                 <li><a href="#none">엠즈푸드시스템</a></li>
                 <li><a href="#none">엠즈파트너스</a></li>
