--- a/sub_page/introduce/maeil_introduce_map_location_1.html
+++ b/sub_page/introduce/maeil_introduce_map_location_1.html
@@ -77,7 +77,7 @@
                 <li>회사소개</li>
                 <li><a href="maeil_introduce.html">기업소개</a></li>
                 <li><a href="maeil_introduce_hello.html">인사말</a></li>
-                <li><a href="#none">히스토리</a></li>
+                <li class="not_ready"><a href="#none">히스토리</a></li>
                 <li><a href="maeil_introduce_map_location_1.html">오시는 길</a></li>
             </ul>
             </div>
@@ -112,7 +112,7 @@
                 <li>사회공헌</li>
                 <li><a href="../social_contribution/social_intro.html">사회공헌 소개</a></li>
                 <li><a href="../social_contribution/give_birth_rate.html">나눔 활동</a></li>
-                <li><a href="#none">사회공헌 연혁</a></li>
+                <li class="not_ready"><a href="#none">사회공헌 연혁</a></li>
                 <li><a href="../social_contribution/social_news.html">나눔소식</a></li>
             </ul>
             </div>
@@ -124,8 +124,8 @@
                 <li>상생 &centerdot; 윤리경영</li>
                 <li><a href="../management/win_win.html">상생경영</a></li>
                 <li><a href="../management/ethical.html">윤리경영</a></li>
-                <li><a href="#none">가족친화 경영</a></li>
-                <li><a href="#none">매일유업 동반성장</a></li>
+                <li class="not_ready"><a href="#none">가족친화 경영</a></li>
+                <li class="not_ready"><a href="#none">매일유업 동반성장</a></li>
             </ul>
             </div>
         </li>
@@ -157,7 +157,7 @@
             <div>
             <ul>
                 <li>ESG 정보 공개</li>
-                <li><a href="#none">ESG 정보 공개</a></li>
+                <li class="not_ready"><a href="#none">ESG 정보 공개</a></li>
             </ul>
             </div>
         </li>
@@ -183,15 +183,15 @@
                 </ul>
                 </li>
                 <li class="indv"><a href="maeil_introduce_hello.html">인사말</a></li>
-                <li class="indv"><a href="#none">히스토리</a></li>
+                <li class="indv not_ready"><a href="#none">히스토리</a></li>
                 <li class="li_wrap2 arrow_button">
                 <a href="#none">오시는 길<img class="active selected" src="images/down_arrow.png" alt="오시는 길 펼치기" /></a>
                 <ul class="side_menu02_open">
                     <li class="indv checked"><a href="maeil_introduce_map_location_1.html">&#45; 본사</a></li>
                     <li class="indv"><a href="maeil_introduce_map_location_2.html">&#45; 연구소</a></li>
-                    <li class="indv"><a href="#none">&#45; 공장</a></li>
-                    <li class="indv"><a href="#none">&#45; 지점</a></li>
-                    <li class="indv"><a href="#none">&#45; 대리점</a></li>
+                    <li class="indv not_ready"><a href="#none">&#45; 공장</a></li>
+                    <li class="indv not_ready"><a href="#none">&#45; 지점</a></li>
+                    <li class="indv not_ready"><a href="#none">&#45; 대리점</a></li>
             </ul>
         </li>
         </ul>
