--- a/sub_page/management/ethical_report.html
+++ b/sub_page/management/ethical_report.html
@@ -70,7 +70,7 @@
                       <li>회사소개</li>
                       <li><a href="../introduce/maeil_introduce.html">기업소개</a></li>
                       <li><a href="../introduce/maeil_introduce_hello.html">인사말</a></li>
-                      <li><a href="#none">히스토리</a></li>
+                      <li class="not_ready"><a href="#none">히스토리</a></li>
                       <li><a href="../introduce/maeil_introduce_map_location_1.html">오시는 길</a></li>
                     </ul>
                   </div>
@@ -103,7 +103,7 @@
                           <li>사회공헌</li>
                           <li><a href="../social_contribution/social_intro.html">사회공헌 소개</a></li>
                           <li><a href="../social_contribution/give_birth_rate.html">나눔 활동</a></li>
-                          <li><a href="#none">사회공헌 연혁</a></li>
+                          <li class="not_ready"><a href="#none">사회공헌 연혁</a></li>
                           <li><a href="../social_contribution/social_news.html">나눔소식</a></li>
                       </ul>
                   </div>
@@ -114,8 +114,8 @@
                           <li>상생 &centerdot; 윤리경영</li>
                           <li><a href="../management/win_win.html">상생경영</a></li>
                           <li><a href="../management/ethical.html">윤리경영</a></li>
-                          <li><a href="#none">가족친화 경영</a></li>
-                          <li><a href="#none">매일유업 동반성장</a></li>
+                          <li class="not_ready"><a href="#none">가족친화 경영</a></li>
+                          <li class="not_ready"><a href="#none">매일유업 동반성장</a></li>
                       </ul>
                   </div>
               </li>
@@ -144,7 +144,7 @@
                   <div>
                       <ul>
                           <li>ESG 정보 공개</li>
-                          <li><a href="#none">ESG 정보 공개</a></li>
+                          <li class="not_ready"><a href="#none">ESG 정보 공개</a></li>
                       </ul>
                   </div>
               </li>
@@ -165,11 +165,11 @@
               <ul class="side_menu01_open">
                 <li class="indv"><a href="ethical.html">&#45; 윤리경영 체계</a></li>
                 <li class="indv checked"><a href="ethical_report.html">&#45; 신고하기</a></li>
-                <li class="indv"><a href="#none">&#45; 신고내역 확인</a></li>
+                <li class="indv not_ready"><a href="#none">&#45; 신고내역 확인</a></li>
               </ul>
             </li>
-            <li class="indv"><a href="#none">가족친화 경영</a></li>
-            <li class="indv"><a href="#none">매일유업 동반성장</a></li>
+            <li class="indv not_ready"><a href="#none">가족친화 경영</a></li>
+            <li class="indv not_ready"><a href="#none">매일유업 동반성장</a></li>
           </ul>
         </div>
 
