--- a/sub_page/social_contribution/social_news.html
+++ b/sub_page/social_contribution/social_news.html
@@ -74,7 +74,7 @@
                       <li>회사소개</li>
                       <li><a href="../introduce/maeil_introduce.html">기업소개</a></li>
                       <li><a href="../introduce/maeil_introduce_hello.html">인사말</a></li>
-                      <li><a href="#none">히스토리</a></li>
+                      <li class="not_ready"><a href="#none">히스토리</a></li>
                       <li><a href="../introduce/maeil_introduce_map_location_1.html">오시는 길</a></li>
                     </ul>
                   </div>
@@ -107,7 +107,7 @@
                           <li>사회공헌</li>
                           <li><a href="../social_contribution/social_intro.html">사회공헌 소개</a></li>
                           <li><a href="../social_contribution/give_birth_rate.html">나눔 활동</a></li>
-                          <li><a href="#none">사회공헌 연혁</a></li>
+                          <li class="not_ready"><a href="#none">사회공헌 연혁</a></li>
                           <li><a href="../social_contribution/social_news.html">나눔소식</a></li>
                       </ul>
                   </div>
@@ -118,8 +118,8 @@
                           <li>상생 &centerdot; 윤리경영</li>
                           <li><a href="../management/win_win.html">상생경영</a></li>
                           <li><a href="../management/ethical.html">윤리경영</a></li>
-                          <li><a href="#none">가족친화 경영</a></li>
-                          <li><a href="#none">매일유업 동반성장</a></li>
+                          <li class="not_ready"><a href="#none">가족친화 경영</a></li>
+                          <li class="not_ready"><a href="#none">매일유업 동반성장</a></li>
                       </ul>
                   </div>
               </li>
@@ -148,7 +148,7 @@
                   <div>
                       <ul>
                           <li>ESG 정보 공개</li>
-                          <li><a href="#none">ESG 정보 공개</a></li>
+                          <li class="not_ready"><a href="#none">ESG 정보 공개</a></li>
                       </ul>
                   </div>
               </li>
@@ -176,7 +176,7 @@
                 <li class="indv"><a href="give_etc.html">&#45; 나눔&#43;</a></li>
               </ul>
             </li>
-            <li class="indv"><a href="#">사회공헌 연혁</a></li>
+            <li class="indv not_ready"><a href="#none">사회공헌 연혁</a></li>
             <li class="indv checked"><a href="social_news.html">나눔소식</a></li>
           </ul>
         </div>
