저출산 수정

--- a/sub_page/social_contribution/give_birth_rate.html
+++ b/sub_page/social_contribution/give_birth_rate.html
@@ -174,7 +174,7 @@
                 <li class="indv"><a href="give_etc.html">&#45; 나눔&#43;</a></li>
               </ul>
             </li>
-            <li class="indv"><a href="#">사회공헌 연혁</a></li>
+            <li class="indv not_ready"><a href="#none">사회공헌 연혁</a></li>
             <li class="indv"><a href="social_news.html">나눔소식</a></li>
           </ul>
         </div>
